# numba-utils

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  GUIDELINES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VISION.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: bench_arrays_algorithms.py  bench_graph.py  bench_parallel.py  bench_random_collections.py  bench_stats.py
docs/: benchmark-honesty.md  benchmarking.md  contributing.md  index.md  modules.md  numba-cache.md  parallelism.md  performance.md  philosophy.md  testing.md
docs/articles/: coverage-cant-see-your-kernels.md  numba-in-production-five-lessons.md  priority-queue-inside-njit.md  weighted-sampling-alias-method.md  why-most-numba-benchmarks-are-wrong.md
docs/design/: README.md  benchmarking.md  cache.md  collections.md  graph.md  parallel.md  rng.md  stats.md
docs/getting-started/: installation.md  quickstart.md
examples/: 01_quickstart.py  02_collections_inside_njit.py  03_diagnostics_and_testing.py
numba_utils/: __init__.py  _config.py  cache_locator.py
numba_utils/algorithms/: __init__.py  _combinatorics.py  _disjoint.py  _select.py  _sort.py  _topk.py
numba_utils/arrays/: __init__.py  _hist.py  _rolling.py  _search.py  _transform.py  _unique.py
numba_utils/collections/: __init__.py  _bitset.py  _dtypes.py  _heap.py  _sparse.py  _stack_queue.py  _typed.py
numba_utils/decorators/: __init__.py  _wrappers.py
numba_utils/diagnostics/: __init__.py  _inspect.py
numba_utils/graph/: __init__.py  _csr.py  _shortest_path.py  _traversal.py  _unionfind.py  _validate.py
numba_utils/parallel/: __init__.py  _chunked.py  _histogram.py  _reduce.py  _scan.py  _topk.py
numba_utils/profiling/: __init__.py  _compare.py  _timer.py
numba_utils/random/: __init__.py  _philox.py  _rng.py  _sampling.py
numba_utils/stats/: __init__.py  _mc.py  _quantile.py  _softmax.py
numba_utils/testing/: __init__.py  _asserts.py  _certify.py  _generators.py  _stochastic.py
tests/: conftest.py  test_algorithms.py  test_arrays.py  test_cache_locator.py  test_collections.py  test_config.py  test_decorators.py  test_diagnostics.py  test_disjoint.py  test_graph.py  test_parallel.py  test_profiling.py  test_random.py  test_stats.py  test_testing.py
