[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "numba-utils"
version = "0.1.0"
description = "High-performance building blocks for Numba."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numba",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["numba_utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
