[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "numba-utils"
dynamic = ["version"]
description = "Battle-tested building blocks for production Numba workloads."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nicolás Seijas", email = "nicoseijas@gmail.com" }]
keywords = [
    "numba",
    "njit",
    "jit",
    "high-performance",
    "numerical-computing",
    "hpc",
    "parallel",
    "benchmarking",
    "data-structures",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "numba",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/nicoseijas/numba-utils"
Repository = "https://github.com/nicoseijas/numba-utils"
Documentation = "https://nicoseijas.github.io/numba-utils/"
Changelog = "https://github.com/nicoseijas/numba-utils/blob/main/CHANGELOG.md"
Issues = "https://github.com/nicoseijas/numba-utils/issues"

[tool.setuptools.dynamic]
version = { attr = "numba_utils.__version__" }

[tool.setuptools.packages.find]
include = ["numba_utils*"]

[tool.setuptools.package-data]
numba_utils = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
